--- a/app/index.html
+++ b/app/index.html
@@ -115,10 +115,10 @@
                     <!--Кнопки управления-->
                     <div class="position__controller-wrap">
                       <div class="position__controller_X">
-                        <input type="number" placeholder="--" class="position__controller_X-input"><a href="#" class="position__controller_X-up"></a><a href="#" class="position_controller_X-down"></a>
+                        <input type="text" placeholder="--" class="position__controller_X-input"><a href="#" class="position__controller_X-up"></a><a href="#" class="position_controller_X-down"></a>
                       </div>
                       <div class="position__controller_Y">
-                        <input type="number" placeholder="--" class="position__controller_Y-input"><a href="#" class="position__controller_Y-up"></a><a href="#" class="position_controller_Y-down"></a>
+                        <input type="text" placeholder="--" class="position__controller_Y-input"><a href="#" class="position__controller_Y-up"></a><a href="#" class="position_controller_Y-down"></a>
                       </div>
                     </div>
                   </div>
